stylesheet.css
.flexbox-container {
    display: flex;
    background-color: #1f2937;
    color: white;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.flexbox-item-top {
    background-color: #1f2937;
    color: white;
    margin: 10px;
    display: flex;
}

.flexbox-item-1 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    margin-left: 30px;
    justify-content: flex-start;
    margin-right: auto;
    font-size: 24px;
    font-weight: bold;
}

.flexbox-item-2 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-end;
}

.flexbox-item-3 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-end;
}

.flexbox-item-4 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-end;
}

/* This is the top header section */

.flexbox-item-hero-head {
    display: flex;
    border: solid 10px #f9faf8;
    margin-top: 150px;
    margin-bottom: 15px;
    margin-left: 30px;
    font-size: 48px;
    font-weight: bolder;
}

.hero-subtext {
    display: flex;
    font-size: 18px;
    color: #e5e7eb;
    background-color: #1f2937;
    margin-left: 30px;
}

.signup-button {
    margin-left: 30px;
    margin-bottom: 100px;
    background-color: #3882f6;
    color: white;
    border-radius: 8px;
    font-size: 20px;
    font-weight: 600;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    padding: 10px;
    padding-left: 30px;
    padding-right: 30px;
}

/* This is the end of the dark hero section */

.random-information-heading {
    color: #1f2937;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 36px;
    font-weight: 900;
    text-align: center;
    margin-bottom: 100px;   
}

.flexbox-container-white {
    display: flex;
    justify-content: center;
}

.flexbox-item-box {
    display: flex;
    width: 200px;
    margin: 10px;
    border: 3px solid blue;
    background-color: white;
    min-height: 200px;
    min-width: auto;
    border-radius: 25px;
}

